examples/test/testpolicy15220.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15220
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key35: value25
      key0: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value7
          key25: value18
      podSelector:
        matchLabels:
          key11: value46
